--- a/my_project/pyproject.toml
+++ b/my_project/pyproject.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "dotenv>=0.9.9",
+    "fastapi>=0.124.2",
+    "langchain>=1.1.3",
+    "langchain-google-genai>=4.0.0",
+    "langchain-openai>=1.1.1",
+    "langgraph>=1.0.4",
+    "uvicorn>=0.38.0",
+]
